# haskell_workshop_2025

./: .gitignore  Dockerfile  JamalsPizzeria.hs  LICENSE  Pizza_u_Antonio  README.md  main.hs  package.yaml  picca.cabal  pizzeria.hs  run.sh  stack.yaml  test.sh
.github/workflows/: ci.yml
app/: Main.hs
src/Builder/: PiccaBuilder.hs
src/Domain/: Picca.hs  PiccaRepository.hs
src/Facade/: PiccaFacade.hs
src/Logger/: PiccaLogger.hs
test/: TestPicca.hs
